# airflow

./: .asf.yaml  .bash_aliases  .bash_completion  .dockerignore  .editorconfig  .flake8  .gitignore  .gitmodules  .mailmap  .markdownlintignore  .pre-commit-config.yaml  .rat-excludes  .travis.yml  .zizmor.yml  AGENTS.md  BREEZE.md  BREEZE.rst  CHANGELOG.txt  CI.rst  COMMITTERS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  Dockerfile.ci  IMAGES.rst  INSTALL  INSTALLING.md  NOTICE  README.md  RELEASE_NOTES.rst  STATIC_CODE_CHECKS.rst  TESTING.rst  UPDATING.md  breeze  breeze-complete  canned-responses.md  confirm  constraints-3.6.txt  constraints-3.7.txt  constraints-3.8.txt  (+10 more)
.apache-steward/: pr-maintainer-review-criteria.md  pr-triage-ci-check-map.md  pr-triage-comment-templates.md  pr-triage-config.md  project.md
.apache-steward-overrides/: README.md
.devcontainer/: devcontainer.json
.devcontainer/mysql/: devcontainer.json
.devcontainer/postgres/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  boring-cyborg.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: airflow_providers_bug_report.yml  issue_report.yml
.github/PULL_REQUEST_TEMPLATE/: pr_template.yml
.github/workflows/: _ci-pipeline.yml  additional-ci-image-checks.yml  basic-tests.yml  build-images-workflow-run.yml  build-images.yml  cancel_duplicate_workflows.yml  cancel_other_workflow_runs.yml  ci-amd-arm.yml  ci-amd.yml  ci-arm.yml  ci-image-build.yml  ci-notification.yml  ci-tests-arm.yml  ci-tests.yml  ci.yml  codeql-analysis.yml  codeql-cancel.yml  codeql.yml  delete_old_artifacts.yml  docs.yml  early-image-checks.yml  finalize-tests.yml  integration-tests.yml  label.yml  label_when_approved.yml  label_when_reviewed.yml  label_when_reviewed_workflow_run.yml  news-fragment.yml  pre-commit.yml  prod-image-build.yml  publish-docs-to-s3.yml  push-image-cache.yml  quarantined.yaml  release_dockerhub_image.yml  run-unit-tests.yml  scheduled_quarantined.yml  synchronize-airflow-main.yml  update-constraints-on-push-stable.yml  update-constraints-on-push.yml  zizmor.yml
airflow/: __init__.py  configuration.py  reproducible_build.yaml  settings.py
airflow-core/: .pre-commit-config.yaml  pyproject.toml
airflow-ctl/: pyproject.toml
airflow-ctl-tests/: pyproject.toml
airflow-e2e-tests/: pyproject.toml
airflow/api_internal/: internal_api_call.py
airflow/executors/: celery_executor.py  dask_executor.py  executor_loader.py  kubernetes_executor.py  local_executor.py
airflow/hooks/: base_hook.py
airflow/kubernetes/: k8s_model.py  pod_generator.py
airflow/migrations/: env.py
airflow/models/: __init__.py  abstractoperator.py  baseoperator.py  dag.py  dagbag.py  serialized_dag.py
airflow/serialization/: base_serialization.py  enums.py  helpers.py  serialization_base.py  serialized_baseoperator.py  serialized_dag.py  serialized_objects.py
airflow/utils/: dag_processing.py  db.py
airflow/www/: app.py  blueprints.py  package-lock.json  package.json  security.py  views.py
chart/: .pre-commit-config.yaml  Chart.yaml  pyproject.toml
clients/python/: pyproject.toml
common/: _autodetect_variables.sh
config/: README.md  active-project.md  user.md.example  user.md.template
contributing-docs/: 01_roles_in_airflow_project.rst  02_how_to_communicate.rst  05_pull_requests.rst  10_working_with_git.rst  12_airflow_dependencies_and_extras.rst  25_maintainer_pr_triage.md
contributing-docs/testing/: k8s_tests.rst  unit_tests.rst
dev/: README_RELEASE_AIRFLOW.md  README_RELEASE_BACKPORT_PROVIDER_PACKAGES.md  README_RELEASE_PROVIDER_PACKAGES.md  airflow-github  pyproject.toml  verify_release_calendar.py
dev/breeze/: README.md  SELECTIVE_CHECKS.md  pyproject.toml
dev/mypy/: pyproject.toml
dev/provider_packages/: BACKPORT_PROVIDER_CHANGES_TEMPLATE.md.jinja2  BACKPORT_PROVIDER_CLASSES_TEMPLATE.md.jinja2  BACKPORT_PROVIDER_README_TEMPLATE.md.jinja2  PROVIDER_COMMITS_TEMPLATE.rst.jinja2  PROVIDER_INDEX_TEMPLATE.rst.jinja2  PROVIDER_README_TEMPLATE.md.jinja2  README.md  README_BACKPORT_PACKAGES.md  SETUP_TEMPLATE.cfg.jinja2  SETUP_TEMPLATE.py.jinja2  copy_provider_package_sources.py  prepare_provider_packages.py
dev/registry/: pyproject.toml
devel-common/: pyproject.toml
docker-stack-docs/: README.md  entrypoint.rst  pyproject.toml
docker-tests/: pyproject.toml
docs/: build.sh  build_docs.py  conf.py  dag-run.rst  operators-and-hooks-ref.rst  spelling_wordlist.txt
docs/apache-airflow/: redirects.txt
docs/apache-airflow-providers-fab/: index.rst
docs/apache-airflow-providers-google/: commits.rst  index.rst
docs/apache-airflow-providers-neo4j/: commits.rst  index.rst
docs/docker-stack/: build-arg-ref.rst  build.rst  changelog.rst
helm-tests/: pyproject.toml
hooks/: build
images/breeze/: output-commands-hash.txt  output_release-management_release-prod-images.txt
images/ci/: pull_request_ci_flow.md5  pull_request_ci_flow.mermaid
kubernetes-tests/: pyproject.toml
kubernetes_tests/: test_kubernetes_executor.py
projects/: README.md
projects/_template/: README.md  canned-responses.md  fix-workflow.md  milestones.md  naming-conventions.md  project.md  release-trains.md  scope-labels.md  security-model.md  title-normalization.md
projects/airflow/: README.md  canned-responses.md  fix-workflow.md  milestones.md  naming-conventions.md  project.md  release-trains.md  scope-labels.md  security-model.md  title-normalization.md
provider_packages/: .gitignore  SETUP_TEMPLATE.py.jinja2  prepare_provider_packages.py  refactor_provider_packages.py  setup_provider_packages.py
providers-summary-docs/: pyproject.toml
providers/airbyte/: pyproject.toml
providers/amazon/: pyproject.toml
providers/edge3/: pyproject.toml
providers/fab/: pyproject.toml
providers/mongo/: pyproject.toml
scripts/: pyproject.toml
scripts/ci/: _utils.sh  ci_before_install.sh  ci_check_license.sh  ci_docs.sh  ci_eslint.sh  ci_flake8.sh  (+36 more)
task-sdk/: pyproject.toml
task-sdk-integration-tests/: pyproject.toml
tests/: all_tests.txt  conftest.py  core.py  test_core.py  test_logging_config.py
(+316 files in other folders)
