# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

;[metadata]
;license_files =
;   LICENSE
;   NOTICE
;   licenses/*.txt
;
;
;[options.package_data]
;airflow=
;    py.typed
;    alembic.ini
;    git_version
;    customized_form_field_behaviours.schema.json
;    provider_info.schema.json
;
;airflow.api_connexion.openapi=*.yaml
;airflow.auth.managers.fab.openapi=*.yaml
;airflow.serialization=*.json
;airflow.utils=
;    context.pyi
;
;[options.data_files]
;generated=
;    generated/provider_dependencies.json
;
;[files]
;packages = airflow
